--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-de-fundo: #000000;
     --verde: #ff0000;
     --branco: #FFFFFF;
-    --botao-ativo: #000000;
+    --botao-ativo: #00000090;
     --botao-inativo: rgb(0, 0, 0);
     --texto-fundo: rgb(0, 0, 0);
 }
